@@ -8,7 +8,7 @@
 #pragma std_c99
 #endif
 
-#if !(defined (__SDCC_mcs51) || defined (__SDCC_hc08) || defined (__SDCC_ds390))
+#if !(defined (__SDCC_mcs51) || defined (__SDCC_hc08) || defined (__SDCC_s08) || defined (__SDCC_ds390))
 int f(int a,int *y)
 {
   int x = a;
@@ -23,7 +23,7 @@ int f(int a,int *y)
 void
 testTortureExecute (void)
 {
-#if !(defined (__SDCC_mcs51) || defined (__SDCC_hc08) || defined (__SDCC_ds390))
+#if !(defined (__SDCC_mcs51) || defined (__SDCC_hc08) || defined (__SDCC_s08) || defined (__SDCC_ds390))
   if (f (10, (int *) 0) != 1)
     ASSERT (0);
   return;
